--- a/src/App.css
+++ b/src/App.css
@@ -2,4 +2,71 @@
   margin: 0 auto;
   width: 80%;
   max-width: 800px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.quiz_question{
+  font-size: 1.2rem;
+  font-weight: bold;
+
+}
+.quiz_options {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.quiz_options > button {
+  margin: 10px;
+  padding: 10px;
+  width: 100%;
+  max-width: 400px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  background-color: #fff;
+  font-size: 1.2rem;
+  font-weight: bold;
+  cursor: pointer;
+}
+.quiz_options > button:hover {
+  background-color: #08983b;
+  color: #fff;
+}
+.result{
+  margin: 0 auto;
+  width: 80%;
+  max-width: 800px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.resetbtn{
+  margin: 10px;
+  padding: 10px;
+  width: 100%;
+  max-width: 400px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  background-color: #fff;
+  font-size: 1.2rem;
+  font-weight: bold;
+  cursor: pointer;
+}
+.resetbtn:hover {
+  background-color: #ff0505;
+  color: #fff;
+}
+.result > h3{
+  color: #08983b;
+  font-size: 1.5rem;
+  font-weight: bold;
+}
+h1{
+  color: #08983b;
+  font-size: 2rem;
+  font-weight: bold;
+  text-align: center;
 }
